# full-stack-todo-app

backend/: .env  .gitignore  pyproject.toml  vercel.json
backend/app/: auth.py  db.py  main.py  models.py  settings.py
backend/app/router/: user.py
frontend/: package-lock.json  package.json  proxy.ts  tsconfig.json  types.tsx
frontend/actions/: actions.ts
frontend/app/api/refresh_access_token/: route.ts
frontend/app/login/: page.tsx
frontend/app/regester/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Modal.tsx  NavBar.tsx  Task.tsx  TodoList.tsx  ToolTip.tsx
frontend/frontend/: package-lock.json  package.json  types.tsx
frontend/frontend/actions/: actions.ts
frontend/frontend/app/: add_new-todo.js  layout.tsx  page.tsx  todo_items.js  todo_list.js  todo_list.tsx  todo_modal.js
frontend/frontend/components/: AddTask.tsx  EditTask.tsx  Task.tsx  ToolTip.tsx
frontend/frontend/components/ui/: Edit_task.tsx  Task.tsx  Tool_tip.tsx  add_task.tsx  header.tsx  logo.tsx  modal.tsx  navbar.tsx  new_taks.tsx  single_todo.tsx  todo_list.tsx
